Add travis yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ before_install:
   - docker build -t sureshhere/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run sureshhere/docker-react npm run test -- --coverage
-  
+  - docker run -e CI=true sureshhere/docker-react npm run test
