--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   region: "us-east-1"
   app: "docker"
   env: "Docker-env"
-  bucket_name: ""
+  bucket_name: "elasticbeanstalk-us-east-1-711345334816"
   bucket_path: "docker"
   on:
     branch: master
